--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,16 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
+        "drupal/admin_toolbar": "^1.23",
+        "drupal/config_update": "^1.5",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5.3",
+        "drupal/devel": "^1.2",
+        "drupal/migrate_devel": "1.x-dev",
+        "drupal/migrate_plus": "^2.0",
+        "drupal/migrate_source_csv": "^2.1",
+        "drupal/migrate_source_directory": "1.x-dev",
+        "drupal/migrate_tools": "^2.0",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
