--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -23,6 +23,11 @@ module:
   image: 0
   link: 0
   menu_ui: 0
+  migrate: 0
+  migrate_plus: 0
+  migrate_source_csv: 0
+  migrate_source_directory: 0
+  migrate_tools: 0
   node: 0
   options: 0
   page_cache: 0
