--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,4 +1,5 @@
 module:
+  admin_toolbar: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -35,7 +36,6 @@ module:
   quickedit: 0
   rdf: 0
   search: 0
-  shortcut: 0
   system: 0
   taxonomy: 0
   text: 0
