--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "drupal/migrate_source_directory": "1.x-dev",
         "drupal/migrate_tools": "^2.0",
         "drush/drush": "^9.0.0",
+        "smalot/pdfparser": "^0.12.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3"
