Updated migrate_plus and migrate_tools

--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,10 @@
         "drupal/core": "~8.5.3",
         "drupal/devel": "^1.2",
         "drupal/migrate_devel": "1.x-dev",
+        "drupal/migrate_plus": "4.0-beta3",
         "drupal/migrate_source_csv": "^2.1",
         "drupal/migrate_source_directory": "1.x-dev",
+        "drupal/migrate_tools": "4.0-beta3",
         "drush/drush": "^9.0.0",
         "smalot/pdfparser": "^0.12.0",
         "vlucas/phpdotenv": "^2.4",
