--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -23,12 +23,18 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  geofield: 0
   help: 0
   history: 0
   image: 0
+  kint: 0
+  leaflet: 0
+  leaflet_views: 0
   link: 0
   menu_ui: 0
   migrate: 0
+  migrate_helpers: 0
+  migrate_meteorite_landings: 0
   migrate_plus: 0
   migrate_source_csv: 0
   migrate_source_directory: 0
