--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -12,6 +12,8 @@ module:
   config: 0
   contact: 0
   contextual: 0
+  d8migrate_mars_rover: 0
+  d8migrate_rover: 0
   datetime: 0
   dblog: 0
   devel: 0
@@ -43,6 +45,7 @@ module:
   page_cache: 0
   path: 0
   pdfparser: 0
+  rover_forms: 0
   system: 0
   taxonomy: 0
   text: 0
