--- a/config/sync/migrate_plus.migration.pdf.yml
+++ b/config/sync/migrate_plus.migration.pdf.yml
@@ -1,4 +1,4 @@
-uuid: 9e65158d-6226-42c1-8729-37135ac4ebdf
+uuid: a9e90271-6e0e-4f66-b173-afdff327b94d
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - migrate_pdfs
 _core:
-  default_config_hash: 0ygNUhxLuRt2G3Qog7YEUtnGVEapVKxTR4eXPuN4L-M
+  default_config_hash: 7swFk5qvz2-44jMnPa1164vAByHlqnoRikhQg3R_vp4
 id: pdf
 class: null
 field_plugin_method: null
@@ -16,7 +16,6 @@ migration_group: pdf
 label: 'PDF Contents'
 source:
   plugin: directory
-  track_changes: true
   urls:
     - ./modules/custom/migrate_pdfs/data/
   file_extensions:
@@ -25,8 +24,11 @@ source:
 process:
   title: filename
   body/value:
-    plugin: parse_pdf
-    source: url
+    -
+      plugin: parse_pdf
+      source: url
+    -
+      plugin: to_upper
 destination:
   plugin: 'entity:node'
   default_bundle: document
