--- a/web/modules/custom/migrate_meteorite_landings/migrate_meteorite_landings.info.yml
+++ b/web/modules/custom/migrate_meteorite_landings/migrate_meteorite_landings.info.yml
@@ -3,3 +3,8 @@ type: module
 description: 'Migration for NASA meteorite landing data'
 core: 8.x
 package: 'D8Migrate'
+dependencies:
+  - migrate
+  - migrate_plus
+  - migrate_tools
+  - migrate_source_csv
